--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 
 # Debug files
 *.dSYM/
+
+# CMake unwanted files
+CMakeCache.txt
+CMakeFiles
+*.cmake
+
+# program name
+serveur
+test_zappy_serveur
