update based on the test done by Julien

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-sudo: false
+sudo: required
+dist: trusty
 language: c
 
 script: make && make test || ./test/test_zappy_server 2>/dev/null
-
-addons:
-  apt:
-    packages:
-      - check
 
 install: .ci/install.sh
 
