--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ install: .ci/install.sh
 os:
   - linux
   - osx
-compiler:
-  - clang
+compiler: clang
 
 notifications:
   slack: dwarfoftherap:cIctwvXXMVkBmwNLxAkA6Y2g
